- Town\\Town_Aldebaran.txt - Updated 'Bell Keeper A' position. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1994 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Aldebaran.txt - Updated 'Bell Keeper A' position. [Tsusai]
 - Town\Town_Alberta.txt - Added Babygirl NPC. [Tsusai]
 - Town\Town_Prontera.txt - Added Hensen and Garnet. [Tsusai]
 - Town\Town_Prontera.txt - Removed commented duplicate of Nenkaras Inn. [Tsusai]
