- Town\\Town_Izlude.txt - Cleaned up, added "" to npc names. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1998 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Izlude.txt - Cleaned up, added "" to npc names. [Tsusai]
 - Town\Town_Geffen.txt - Added "" to npc names. [Tsusai]
 - Town\Town_Comodo.txt - Corrected a few names and reformated. [Tsusai]
 - Warp\newbies\new_zone.txt - Removed new_#-#.gat warps (maps no longer exist). [Tsusai]
