--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Morocc.txt - Cleaned up, added missing npcs. [Tsusai]
 - Town\Town_Izlude.txt - Cleaned up, added "" to npc names. [Tsusai]
 - Town\Town_Geffen.txt - Added "" to npc names. [Tsusai]
 - Town\Town_Comodo.txt - Corrected a few names and reformated. [Tsusai]
