*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2001 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- shop\comodo.txt - Splitted tur_dun into a seperate file. [Muad_Dib]
+- shop\tur_dun.txt - Added tur_dun shop. [Muad_Dib]
 - Town\Town_Payon.txt - Cleaned up, added "" to npc names. [Tsusai]
 - Town\Town_Morocc.txt - Cleaned up, added missing npcs. [Tsusai]
 - Town\Town_Izlude.txt - Cleaned up, added "" to npc names. [Tsusai]
