*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2005 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Warp\town\ - Reorganised a few warp scripts. [Muad_Dib]
 - Job\Job2_Alchemist.txt - moved from new to old folder. [Muad_Dib]
 - Job\Job2_Dancer - Bard.txt - moved from new to old folder. [Muad_Dib]
 - Job\Job2_Monk.txt - moved from new to old folder. [Muad_Dib]
