--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Warp\dungeons\Glast_Heim.txt - Combined all separate warp files and renames all warps. [Tsusai]
 - Warp\town\ - Reorganised a few warp scripts. [Muad_Dib]
 - Job\Job2_Alchemist.txt - moved from new to old folder. [Muad_Dib]
 - Job\Job2_Dancer - Bard.txt - moved from new to old folder. [Muad_Dib]
