*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2008 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Warp\town\ - Reorganised rest of that folder. [Muad_Dib]
 - Warp\dungeons\gl_cas.txt - Moved to archive. [Tsusai]
 - Warp\dungeons\gl_church.txt - Moved to archive. [Tsusai]
 - Warp\dungeons\gl_chyard.txt - Moved to archive. [Tsusai]
