--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Warp\npcs\Yuno_Random_Warps.txt -  Moved to archive. [Tsusai]
+- Warp\towns\Yuno.txt - Moved random warps here, and updated npc id #'s to 45. [Tsusai]
 - Warp\town\ - Reorganised rest of that folder. [Muad_Dib]
 - Warp\dungeons\gl_cas.txt - Moved to archive. [Tsusai]
 - Warp\dungeons\gl_church.txt - Moved to archive. [Tsusai]
