- Warp\\guilds\\*_gld.txt - Moved to archive. [Tsusai] - Warp\\guilds\\*_gld.txt - Warps moved into conjugate *_cas.txt files. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2012 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Warp\guilds\*_gld.txt - Moved to archive. [Tsusai]
+- Warp\guilds\*_gld.txt - Warps moved into conjugate *_cas.txt files. [Tsusai]
 - Warp\npcs - Removed empty directory. [Tsusai]
 - Archive - Rearanged. [Tsusai]
 - Warp\npcs\Yuno_Random_Warps.txt -  Moved to archive. [Tsusai]
