*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2013 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Mob\dungeon\lou_dun.txt - Edited the spawns. [Muad_Dib]
+- Mob\field\lou_fild.txt - Edited the spawns. [Muad_Dib]
 - Warp\guilds\*_gld.txt - Moved to archive. [Tsusai]
 - Warp\guilds\*_gld.txt - Warps moved into conjugate *_cas.txt files. [Tsusai]
 - Warp\npcs - Removed empty directory. [Tsusai]
