--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -7,6 +7,10 @@
 ====================================================================================================
 
 ----------------------------------------------------------------------------------------------------
+ Fusion NPC Pack - 1.005
+----------------------------------------------------------------------------------------------------
+
+----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
 - Mob\dungeon\lou_dun.txt - Edited the spawns. [Muad_Dib]
