--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -13,6 +13,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Job\Job2_Sage.txt - fixed a tag. [Muad_Dib]
 - Mob\dungeon\lou_dun.txt - Edited the spawns. [Muad_Dib]
 - Mob\field\lou_fild.txt - Edited the spawns. [Muad_Dib]
 - Warp\guilds\*_gld.txt - Moved to archive. [Tsusai]
