*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2018 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Dye.txt - fixed fixed various dye colours requirements. [Muad_Dib]
+- Event\Event_Making.txt - fixed cake hat requirements. [Muad_Dib]
 - Job\Job2_Sage.txt - fixed a tag. [Muad_Dib]
 
 ----------------------------------------------------------------------------------------------------
