--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Job\Job1_Swordman.txt - Put back in changes cause it works server sided. [Muad_Dib]
+- Mob\other\job_quests.txt - Put back in changes cause it works server sided. [Muad_Dib]
+- Warp\other\job_sword.txt - Put back in changes cause it works server sided. [Muad_Dib]
 - Job\Job1_Swordman.txt - Rolled back, sword_1-# maps do not exist in kRO GRF. [Tsusai]
 - Mob\other\job_quests.txt - Rolled back, sword_1-# maps do not exist in kRO GRF. [Tsusai]
 - Warp\other\job_sword.txt - Rolled back, sword_1-# maps do not exist in kRO GRF. [Tsusai]
