*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2032 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Rental.txt - Falcon Fancenier now checks for Sniper instead of High Wizard. [Muad_Dib]
 - Quest\Quest_Skill\NPC_Novice_Skill - Added more up to date version of the novice skill quests. [Muad_Dib]
 - Mob\dungeon\xmas_dun - Fixed Mastering spawn. [Muad_Dib]
 - Job\Job1_Swordman.txt - Put back in changes cause it works server sided. [Muad_Dib]
