--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Original\*.* - Removed. [Tsusai].
+- Town\Town_Prontera.txt - Moved info from Original_Nenkaras.txt to here. [Tsusai].
 - Event\Event_Prontera_Sewers.txt - Seperated from Town_Prontera.txt and updated/cleaned the script . [Muad_Dib]
 - Town\Town_Prontera.txt - Reorganised town prontera. [Muad_Dib]
 - GvG\npc_guardiankafra.txt - Simplified the script. [Tsusai/icbob]
