--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Job\Job1_Magician.txt - Fixed the quest item requirements. [Muad_Dib]
 - Event\Event_Prontera_Sewers.txt - Seperated from Town_Prontera.txt and updated/cleaned the script . [Muad_Dib]
 - Original\*.* - Removed. [Tsusai].
 - Town\Town_Prontera.txt - Moved info from Original_Nenkaras.txt to here. [Tsusai].
