--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Warp\other\Monk_guild.txt - Added missing jAthena warps, moved old warps to Archive. [Tsusai]
 - Shop\amatsu.txt - Updated amatsu shops. [Muad_Dib]
 - Town\Town_amatsu.txt - Corrected some minor bits. [ Muad_Dib]
 - Job\Job1_Swordman.txt - Added 3 Broadcasts. [Muad_Dib]
