- Archive\\ - Commented out warps. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2048 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Archive\ - Commented out warps. [Tsusai]
 - Warp\other\Monk_guild.txt - Added missing jAthena warps, moved old warps to Archive. [Tsusai]
 - Shop\amatsu.txt - Updated amatsu shops. [Muad_Dib]
 - Town\Town_amatsu.txt - Corrected some minor bits. [ Muad_Dib]
