- GvG\\pay_cas02.txt - Fixed a mes error. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2050 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- GvG\pay_cas02.txt - Fixed a mes error. [Tsusai]
 - Shop\yuno.txt - Updated Yuno shops. [Muad_Dib]
 - Shop\amatsu.txt - Updated Amatsu shops. [Muad_Dib]
 - Archive\ - Commented out warps. [Tsusai]
