--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- GvG\npc_guardiankafra.txt - Simplified the script again. [Tsusai]
 - GvG\pay_cas02.txt - Fixed a mes error. [Tsusai]
 - Shop\yuno.txt - Updated Yuno shops. [Muad_Dib]
 - Shop\amatsu.txt - Updated Amatsu shops. [Muad_Dib]
