*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2057 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,10 +9,12 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Alberta.txt - Updated Gotanblue NPC. [Muad_Dib]
+- Town\Town_Prontera.txt - Added missing guard [Muad_Dib]
+- Town\Town_Geffen.txt - Updated Town Geffen and fixed a next; command. [Muad_Dib]
 - Event\Event_Dye.txt - Fixed a few mes errors. [Muad_Dib]
 - Event\Event_Rental.txt - Changed some text parts. [Muad_Dib]
 - Town\Town_Alberta.txt - Updated Town Alberta (Again Yeah) [Muad_Dib]
-- Town\Town_Geffen.txt - Updated Town Geffen and fixed a next; command. [Muad_Dib]
 - Town\Town_Prontera.txt - Updated Town Prontera. [Muad_Dib]
 - Town\Town_Payon.txt - Updated Town Payon. [Muad_Dib]
 - Town\Town_Izlude.txt - Updated Town Izlude. [Muad_Dib]
