*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2061 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Comodo.txt - Updated Serutero NPC. [Muad_Dib]
+- Town\Town_Morocc.txt - Updated Town Morroc. [Muad_Dib]
+- Warp\fields\cmd_fild.txt - Updated a warp [Muad_Dib]
 - Town\Town_Payon.txt - Added Header. [Muad_Dib]
 - Town\Town_Prontera.txt - Updated Header. [Muad_Dib]
 - Town\Town_Prontera.txt - Updated Strife Npc. [Muad_Dib]
