--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Job\Job2_Rogue.txt - Updated change location. [Muad_Dib]
+- Town\Town_Comodo.txt - Updated variuos NPC's. [Muad_Dib]
+- Town\Town_Kafra.txt - Updated Fomodo Field Kafra. [Muad_Dib]
 - Town\Town_Comodo.txt - Updated Serutero NPC. [Muad_Dib]
 - Town\Town_Morocc.txt - Updated Town Morroc. [Muad_Dib]
 - Warp\fields\cmd_fild.txt - Updated a warp [Muad_Dib]
