--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,8 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Kafra.txt - Updated Comodo kafra prices.=. [Muad_Dib]
 - Town\Town_Comodo.txt - Updated a Paros Lighthouse NPC. [Muad_Dib]
-- Town\Town_Kafra.txt - Updated a few kafra's. [Muad_Dib]
 - Job\Job2_Rogue.txt - Updated change location. [Muad_Dib]
 - Town\Town_Comodo.txt - Updated various NPC's. [Muad_Dib]
 - Town\Town_Kafra.txt - Updated Comodo Field Kafra. [Muad_Dib]
