*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2066 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Juno.txt - Updated Town Juno. [Tezuka]
 - Changelog.txt - fixed the \ in the web addresses to / [Tsusai]
 - Town\Town_Kafra.txt - Updated Comodo kafra prices.=. [Muad_Dib]
 - Town\Town_Comodo.txt - Updated a Paros Lighthouse NPC. [Muad_Dib]
