*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2069 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.005
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Clocktower.txt - Added Event Clocktower. [Muad_Dib]
+- Town\Town_Aldebaran.txt - Moved Bell Keeper to Event_Clocktower. [Muad_Dib]
 - shop\payon.txt - Updated Payon shops. [Muad_Dib]
 - shop\geffen.txt - Updated Geffen shops. [Muad_Dib]
 - shop\yuno.txt - Updated Yuno shops. [Muad_Dib]
